src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  background-color: #e0e0e0;
}

.addleadForm .formButtons {
  text-align: end;
  margin: 15px 0px;
}

.formButtons > button {
  margin-left: 10px;
}

.loginForm, .signupForm {
  background: white;
  padding: 50px;
  border-radius: 5px;
}

.loginForm h1 {
  margin: 15px 0;
  text-align:center;
}

.loginFormButton, .signupFormButton {
  margin: 15px 0;
  text-align: right;
}

.loginFormButton button, .signupFormButton button {
  padding: 0.75rem 1rem;
  font-size: 14px;
  font-weight: bold;
  letter-spacing: 0.8px;
  text-transform: uppercase;
}

.form-control {
  margin: 10px 0;
}

.form-control label {
  display: block;
  font-weight: bold;
  letter-spacing: 0.8;
  margin-bottom: 5px;
}

.form-control input {
  display: block;
  width: 100%;
  height: calc(1.5em + .75rem + 2px);
  padding: .375rem .75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid #ced4da;
  border-radius: .25rem;
  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

table {
  width: 100%;
  margin-bottom: 1rem;
  color: #212529;
}

thead tr th {
  color: #fff;
  background-color: #343a40;
  border-color: #454d55;
  padding: .75rem;
  vertical-align: top;
}

tbody tr td {
  padding: .75rem;
  vertical-align: top;
  border-top: 1px solid #dee2e6;
}

button {
  font-weight: 400;
  color: white;
  background-color: #212529;
  text-align: center;
  border: 1px solid #212529;
  padding: .375rem .75rem;
}

.dashboardContainer {
  width: 100%;
  margin: 0 auto;
}

.userHeader {
  display: flex;

}

.adminTools {
  display: flex;
  justify-content: center;
}

.adminTools > select {
  flex: 1;
}


nav > a, nav > button {
  background: none;
  padding: 0;
  border: 0;
  color: #212529;
  font-size: 16px !important;
  margin-right: 10px;
  text-decoration: none;
  justify-content: space;
  width: 100%;
}

.appLogo h2 {
  background-color: #272828;
  color: white;
}

.navLinkList > li {
  background-color: #272828;
  font-weight: bold;
}

.navLinkList > li > a {
  text-decoration: none;
  margin-right: .5rem;
  color: white;
}

.navLinkList > li > a:hover {
  font-style: italic ;
}

.navLinkList {
  background-color: #272828;
  display: flex;
  align-items: baseline;
  list-style: none;
}

.Nav {
  width: 100%;
}

.Nav_container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 15px;
  background-color: #272828;
}

.AddLeadForm {
  margin: 10px;
  border-bottom: 1px solid #c3c3c3;
}

.leadTool {
  margin: 1rem 1.5rem;
}

.userHeader {
  margin: 1.5rem;
}

.tableHeader {
  font-size: 32px;
}

.viewedUser {
  font-size: large;
  flex: 1;
}

.welcome {
  display: flex;
  justify-content: center;
  margin-top: 2rem;
}

.welcomeDesc {
  display: flex;
  justify-content: center;
  margin-bottom: 2rem;
}

.Overview {
  margin-bottom: 2rem;
}

.Overview > h3, .Features > h3 {
  display: flex;
  margin-bottom: .5rem;
  justify-content: center;
}

.Overview > p {
  display: flex;
  margin-bottom: .5rem;
  justify-content: center;
  text-align: justify;
  margin-right: 1rem;
  margin-left: 1rem;
}

.signupHeader {
  display: flex;
  justify-content: center;
}

.leadsTable {
  overflow-x: auto;
}

.tableHeader {
  margin: 10px;
}

.leadsList {
  padding: 0;
  margin: 0 10px;
  list-style: none;
}

.leadsList li {
  display: flex;
  flex-wrap: wrap;
  background: white;
  padding: 10px 15px;
  border-radius: 5px;
  align-items: center;
  border: 1px solid lightgrey;
  margin-bottom: 15px;
}

.leadsList .leadsDetails {
  text-overflow: ellipsis;
  overflow: hidden;
}

.last-contacted-date {
  color: #757575;
  font-weight: bold;
  font-size: 13px;
  margin-top: 5px;
}

.leadsList button {
  margin: 10px 10px 10px 0;
}

.Features {
  display: flex;
}

.Features > h3 {
  align-items: center;
}

.Features > ul > li  {
  display: inline-block;
  justify-content: center;
  margin-left: 1rem;
  margin-bottom: .5rem;
}

@media screen and (min-width: 767px) {
  .loginForm, .signupForm {
    margin: 50px auto;
    width: 600px;
  }

  .dashboardContainer {
    width: 600px;
  }

  .leadsList .leadsDetails {
    flex: 1;
  }

  .leadsList button {
    margin: 0 0 0 10px;
  }

  .Features {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .Features > h3 {
    justify-content: center;
  }
  
  .Features > ul {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    
  }

  .Features > ul > li {
    list-style-type: circle;
  }

}

@media screen and (min-width: 1023px) {
  html {
    width: 100%;
  }
}

